# Opogen

./: .gitignore  .pdm-python  Dockerfile  README.md  pyproject.toml
.github/workflows/: ruff.yml
src/client/: README.md  package-lock.json  package.json
src/client/src/: App.vue
src/client/src/components/: Books.vue  Home.vue  Ping.vue
src/client/src/router/: index.js
src/opogen/: main.py
src/opogen/llm/: llm_service.py  parsers.py  prompts.py
src/opogen/read_files/: FASES DEL PROCEDIMIENTO ADMINISTRATIVO.docx
src/opogen/utils/: file_utils.py  str_utils.py
src/server/: _globals.py  main.py  pyproject.toml
src/server/llm/: llm_service.py  parsers.py  prompts.py
src/server/utils/: file_utils.py  frame_utils.py  logger.py  response_utils.py  str_utils.py
